force-app/main/default/objects/WorkStep/fields/FSM_AlternativeFormsGroup__c.field-meta.xml
<CustomField>
    <fullName>FSM_AlternativeFormsGroup__c</fullName>
    <description>Created as part of SFS-6569. Any one of the forms under this group requires completion. Also referenced in FSM_DCFConfigurationWorkStep metadata.</description>
    <inlineHelpText>Any one of the forms under this group requires completion.</inlineHelpText>
    <label>Alternative Form&apos;s Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sewerage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>