force-app/main/default/objects/WorkStep/fields/FSM_ContactName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContactName__c</fullName>
    <description>created as part of sfs-8108.
Backend Field</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>