force-app/main/default/objects/WorkStep/fields/FSM_IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be checked once the WorkStep is Completed .</description>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>