force-app/main/default/objects/WorkStep/fields/FSM_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>FSM_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory On Complete</label>
    <type>Checkbox</type>
</CustomField>