force-app/main/default/objects/WorkStep/fields/FSM_MandatoryIcon__c.field-meta.xml
<CustomField>
    <fullName>FSM_MandatoryIcon__c</fullName>
    <formula>IF(FSM_Mandatory__c = False &amp;&amp; FSM_MandatoryOnSuspend__c = False,&quot;&quot;, 
    (   
        IF (FSM_Mandatory__c = TRUE, &quot;❗&quot;,&quot; ❌&quot;)&amp;
        IF (FSM_MandatoryOnSuspend__c = TRUE, &quot;❗&quot;, &quot; ❌&quot;)
    )
)</formula>
    <label>Mandatory Icon</label>
    <type>Text</type>
</CustomField>