force-app/main/default/objects/WorkStep/fields/FSM_MandatoryOnSuspend__c.field-meta.xml
<CustomField>
    <fullName>FSM_MandatoryOnSuspend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this DCF is mandatory for suspension. SFS-6571</description>
    <inlineHelpText>If checked, this DCF is mandatory for suspension.</inlineHelpText>
    <label>Mandatory On Suspend</label>
    <type>Checkbox</type>
</CustomField>