force-app/main/default/objects/WorkStep/fields/FSM_OccCity__c.field-meta.xml
<CustomField>
    <fullName>FSM_OccCity__c</fullName>
    <description>created as part of sfs-8108</description>
    <formula>WorkOrder.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupier&apos;s City</label>
    <type>Text</type>
</CustomField>