force-app/main/default/objects/WorkStep/fields/FSM_OccPostCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_OccPostCode__c</fullName>
    <description>created as part of sfs-8108</description>
    <formula>WorkOrder.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupier&apos;s Post Code</label>
    <type>Text</type>
</CustomField>