force-app/main/default/objects/WorkStep/fields/FSM_OccStreet__c.field-meta.xml
<CustomField>
    <fullName>FSM_OccStreet__c</fullName>
    <description>Created as part of sfs-8108</description>
    <formula>WorkOrder.Street</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupier&apos;s Street</label>
    <type>Text</type>
</CustomField>