force-app/main/default/objects/WorkStep/fields/FSM_OccTown__c.field-meta.xml
<CustomField>
    <fullName>FSM_OccTown__c</fullName>
    <description>Created as part of sfs-8108</description>
    <formula>WorkOrder.State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupier&apos;s Town</label>
    <type>Text</type>
</CustomField>