force-app/main/default/objects/WorkStep/fields/FSM_Occupiers_Address__c.field-meta.xml
<CustomField>
    <fullName>FSM_Occupiers_Address__c</fullName>
    <description>created as part of SFS-7964</description>
    <formula>WorkOrder.Street  &amp; &quot; &quot; &amp;  WorkOrder.City &amp; &quot; &quot; &amp; WorkOrder.State  &amp; &quot; &quot; &amp;  WorkOrder.Country  &amp; &quot; &quot; &amp; WorkOrder.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupiers Address</label>
    <type>Text</type>
</CustomField>