force-app/main/default/objects/WorkStep/fields/FSM_SAP_Order_Operation_Number__c.field-meta.xml
<CustomField>
    <fullName>FSM_SAP_Order_Operation_Number__c</fullName>
    <formula>WorkOrder.FSM_ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Order-Operation Number</label>
    <type>Text</type>
</CustomField>